--- a/css/index.css
+++ b/css/index.css
@@ -14,7 +14,7 @@ section{
   background:#89C355;
 }
 #thought{
-  background:#4c93eb;
+  background:#769C60;
 }
 #team{
   background:rgb(206, 236, 142);
@@ -64,4 +64,8 @@ section{
   font-size:50px;
   padding-top:25px;
   color:rgb(24, 112, 24);
+}
+footer{
+  height:300px;
+  background:black;
 }
