--- a/css/index.css
+++ b/css/index.css
@@ -66,6 +66,24 @@ section{
   color:rgb(24, 112, 24);
 }
 footer{
-  height:300px;
+  height:350px;
   background:rgb(166, 218, 138);
+}
+footer p{
+  color:white;
+  font-size:40px;
+  text-indent:4em;
+  padding-top:10px;
+}
+#centered{
+  width:90%;
+  margin:0 auto;
+}
+.one_third{
+  width:33%;
+  height:250px;
+  background:rgb(146, 213, 112);
+  border:solid 10px rgb(166, 218, 138);
+  border-radius:20px;
+  float:left;
 }
