--- a/css/index.css
+++ b/css/index.css
@@ -53,9 +53,8 @@ section{
   font-size:30px;
   padding-top:40px;
   text-align:left;
-  margin:10px auto;
+  margin:0 auto;
   line-height:1.5;
-  width:80%;
 }
 
 .half{
