--- a/css/index.css
+++ b/css/index.css
@@ -15,7 +15,7 @@ section{
   /*background:#89C355;*/
   background:#4E6F30;
 }
-#to_page2{
+.to_page{
   border-radius:50%;
   font-size:40px;
   text-align:center;
@@ -33,18 +33,28 @@ section{
   float:left;
   border-radius:10px;
   background:rgb(183, 212, 156);
-  padding-top:0px;
-  margin-left:100px;
-  margin-top:10px;
+  padding:0 0 15px 0;
+  margin:20px 0px 20px 100px;
 }
 #setsumei p{
   width:80%;
   line-height:1.5;
   font-size:20px;
-  color:white;
+  color:rgb(77, 81, 100);
   padding:10px;
   display:block;
   margin:0 auto;
+}
+.button{
+  display:block;
+  border-radius:10px;
+  background:yellow;
+  text-align:center;
+  font-size:20px;
+  float:left;
+  width:17%;
+  padding:10px 0 10px 0;
+  margin-left:165px;
 }
 #latest{
   background:rgb(173, 216, 127);
@@ -138,13 +148,17 @@ section{
 }
 footer{
   height:350px;
-  background:rgb(166, 218, 138);
+  background:#474b59;
 }
 footer p{
   color:white;
-  font-size:40px;
+  font-size:20px;
   text-indent:4em;
-  padding-top:10px;
+  padding-top:30px;
+  margin-left:50px;
+}
+footer span{
+ display:block;
 }
 .centered{
   width:90%;
@@ -157,4 +171,10 @@ footer p{
   border:solid 10px rgb(166, 218, 138);
   border-radius:20px;
   float:left;
+}
+.email{
+  color:#43c469;
+}
+.social{
+  margin:20px 0 0 40px;
 }
