--- a/css/index.css
+++ b/css/index.css
@@ -178,3 +178,13 @@ footer span{
 .social{
   margin:20px 0 0 40px;
 }
+.copy{
+  border-left:solid grey 2px;
+  float:right;
+  padding-right:200px;
+}
+.copy span{
+  font-size:30px;
+  color:grey;
+  padding:0 0 30px 10px;
+}
